# optimization-rs

./: Cargo.toml  README.md
src/: l_bfgs.rs  lbfgs.rs  lib.rs  line_search.rs  numerical_diff.rs  prelude.rs  sgd_adam.rs  vec.rs
