[package]
name = "opensrdk-optimization"
version = "0.1.3"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard mathematical optimization library for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/optimization-rs"
license = "Apache-2.0"
keywords = ["machine-learning"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rayon = "1.5.0"
thiserror = "1.0.24"
opensrdk-linear-algebra = "0.6.4"

[dev-dependencies]
blas-src = { version = "0.7", features = ["intel-mkl"] } 
lapack-src = { version = "0.6", features = ["intel-mkl"] }
