[package]
name = "opensrdk-optimization"
version = "0.1.4"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard mathematical optimization library for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/optimization-rs"
license = "Apache-2.0"
keywords = ["machine-learning"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5.1"
thiserror = "1.0.28"
opensrdk-linear-algebra = "0.7.3"

[dev-dependencies]
blas-src = { version = "0.8", features = ["intel-mkl"] } 
lapack-src = { version = "0.8", features = ["intel-mkl"] }
